hphp/hack/test/sound_dynamic/typing/intersection_dynamic.bad.php.exp
File "intersection_dynamic.bad.php", line 12, characters 10-19:
Invalid return type (Typing[4110])
  File "intersection_dynamic.bad.php", line 10, characters 23-28:
  Expected `string`
  File "intersection_dynamic.bad.php", line 6, characters 22-23:
  But got `dynamic`
